Refactor codebase: improve null safety across entities, enhance type annotations with jspecify, optimize OptionValue pre-remove logic, add NullAway checks, and enable errorprone plugin in build script.